[BE-023] Reordenar puntos de ruta
